force-app/main/default/objects/Related_Customer__c/Related_Customer__c.object-meta.xml
<CustomObject>
    <description>This is created as part of  US-12226</description>
    <label>Related Customer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>