force-app/main/default/objects/Related_Customer__c/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <description>This is created as part of US-12226</description>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Customers (Customer Account)</relationshipLabel>
    <relationshipName>RelatedCustomers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>