force-app/main/default/objects/Related_Customer__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created as part of US-12226</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>