force-app/main/default/objects/Related_Customer__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is created as part of  US-12226</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Customers</relationshipLabel>
    <relationshipName>RelatedCustomers</relationshipName>
    <type>Lookup</type>
</CustomField>