force-app/main/default/objects/Related_Customer__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This is created as  part of US-12226</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>