force-app/main/default/objects/Related_Customer__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Used to store start date .Created as part of US 12226</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>